--- a/quiz.css
+++ b/quiz.css
@@ -1,13 +1,178 @@
-body{
-    background-color: pink;
-    color: black;
-    font-size: 20px;
-    font-weight: bolder;
-    margin-left: 2rem;
+@import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
 }
+i{
+  color: yellow;
+}
+body {
+  line-height: 30px;
+  color: whitesmoke;
+  
+ 
+ background-image : url(https://cdn.pixabay.com/photo/2020/03/21/14/45/rocket-4954229_960_720.jpg);
+ background-size: cover;
+ background-repeat: no-repeat;
+ 
+  cursor: pointer;
+}
+#black{
+  display: block;
+  text-align: center;
+  text-decoration: underline;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 30px;
+}
+
+
+ 
+.inside{
+ 
+  width: 80px;
+  height: 80px;
+  position: relative;
+  animation-name: Quiz;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+@keyframes Quiz{
+  from{
+width: 0%;
+  }
+  to{
+width: 100%;
+  }
+}
+
+
 #button{
-    background-color: black;
-    color: white;
-    font-size: 18px;
-    padding: 5px;
+  background-color: #ffffff10;
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  
+  color: black;
+  font-size: 18px;
+  padding: 10px;
+  width: 133px;
+ 
+  border-radius: 5px;
+
+  
 }
+#buttons{
+  position: relative;
+display: flex;
+justify-content: center;
+
+}
+#button:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+.container1{
+    position: relative;
+    display: flex;
+    justify-content:space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 10px;
+}
+
+.container2{
+    position: relative;
+    display: flex;
+    justify-content:space-around;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.child1{
+    
+  border: 2px solid black;
+  border-radius: 4px;
+  height: 257px;
+  width: 371px;
+  
+  background-color: #ffffff10;
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  padding: 26px;
+  margin-bottom: 10px;
+}
+.child2{
+  background-color: #ffffff10;
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+    border: 2px solid black;
+   
+    border-radius: 4px;
+    height: 257px;
+    width: 371px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    padding: 26px;
+  }
+.child:hover {
+  background-color: rgb(168, 47, 47);
+  color: black;
+  transform: scale(1.06);
+}
+.child1 input{
+  
+
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+
+  border: 2px solid rgb(5, 5, 5);
+  transition: 0.2s all linear;
+  margin-right: 5px;
+
+  position: relative;
+  top: 4px;
+}
+.child2 input{
+  
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+
+  border: 2px solid rgb(5, 5, 5);
+  transition: 0.2s all linear;
+  margin-right: 5px;
+
+  position: relative;
+  top: 4px;
+}
+
+p{
+  display:flex;
+  flex-direction: row;
+  justify-items:start;
+  
+  padding: 2px;
+  margin: 4px;
+  
+}
+p:hover{
+  background-color: #a9a94d;;
+  color: black;
+  transform: scale(1.06);
+}
+.final:hover{
+  background-color: #a9a94d;
+ 
+  width: 900px;
+}
+.final{
+  text-decoration: underline;
+  font-size: 25px;
+  text-transform: uppercase;
+  margin-left: 164px;
+  
+}
+
